--- a/MvcLearning/WebApplication1/BL.vbproj
+++ b/MvcLearning/WebApplication1/BL.vbproj
@@ -163,6 +163,8 @@
     <Compile Include="App_Start\FilterConfig.vb" />
     <Compile Include="App_Start\RouteConfig.vb" />
     <Compile Include="App_Start\WebApiConfig.vb" />
+    <Compile Include="Controllers\Class1.vb" />
+    <Compile Include="Controllers\Program.vb" />
     <Compile Include="Controllers\UserController.vb" />
     <Compile Include="Global.asax.vb">
       <DependentUpon>Global.asax</DependentUpon>
