--- a/MvcLearning/OOP/frst/MyFirstCrud/Login/Web.config
+++ b/MvcLearning/OOP/frst/MyFirstCrud/Login/Web.config
@@ -9,10 +9,20 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+  
+    <!--APP Name-->
+    <add key ="appname" value="thing"/>
+    <!--APP Name-->  
+    
+    <!--APP Name-->
+    <add key ="isDebug" value="false"/>
+    <!--APP Name-->
+  
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
+    <sessionState timeout="1"/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
