--- a/MvcLearning/OOP/frst/MyFirstCrud/UI/UI.vbproj
+++ b/MvcLearning/OOP/frst/MyFirstCrud/UI/UI.vbproj
@@ -134,12 +134,14 @@
     <Compile Include="App_Start\RouteConfig.vb" />
     <Compile Include="BL\FreindVM.vb" />
     <Compile Include="BL\ProductManager.vb" />
+    <Compile Include="Code\SessionManager.vb" />
     <Compile Include="Controllers\ProductController.vb" />
     <Compile Include="DAL\DAL.vb" />
     <Compile Include="Entities\Product.vb" />
     <Compile Include="Global.asax.vb">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\UserVM.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -207,7 +209,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
     <Folder Include="Views\Freind\" />
   </ItemGroup>
   <PropertyGroup>
