--- a/MvcLearning/SpaceShipsStore/SpaceShipsStore/SpaceShipsStore/SpaceShipsStore.vbproj
+++ b/MvcLearning/SpaceShipsStore/SpaceShipsStore/SpaceShipsStore/SpaceShipsStore.vbproj
@@ -194,6 +194,7 @@
     <Content Include="Views\Shared\_Layout.vbhtml" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+    <Content Include="Views\Home\Index.vbhtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -203,7 +204,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Home\" />
     <Folder Include="Views\SpaceShipsList\" />
   </ItemGroup>
   <PropertyGroup>
